# arewelegacycomputingyet.com

./: .gitignore  CLAUDE.md  CNAME  index.html  legacy_computing_compatibility.csv  legacy_computing_sections.txt  legacy_computing_supplement_compatibility.csv  legacy_computing_supplement_sections.txt  legacy_computing_table.ansi  rebuild.sh
.claude/: settings.local.json
font-codepoint-checker/: check_fonts.sh  font_codepoint_checker.py  pyproject.toml
scripts/character-compatibility/: character_compatibility.py  pyproject.toml
scripts/compatibility-viewer/: index.html
scripts/svg-extractor/: analyze_glyphs.py  check_metrics.py  debug_glyphs.py  explore_pdf.py  extract_cmap.py  extract_font.py  generate_svgs.py  main.py  pyproject.toml
scripts/template/: generate.py  pyproject.toml  script.js  style.css  template.html
svgs/: index.html
svgs/legacy_computing/: test.html
svgs/legacy_computing_supplement/: index.html
terminal-emulators/: legacy_computing_compatibility.csv  legacy_computing_sections.csv  legacy_computing_supplement_compatibility.csv  legacy_computing_supplement_sections.csv
terminal-emulators/legacy_computing_compatibility/: ghostty.csv  kitty.csv  urxvt.csv  vte.csv  xtermjs.csv
terminal-emulators/legacy_computing_supplement_compatibility/: ghostty.csv  kitty.csv  uxterm.csv  vte.csv
tests/: circle.txt  legacy_computing_supplement_table.ansi  legacy_computing_supplement_table.sh  legacy_computing_supplement_table.txt  legacy_computing_table.sh  legacy_computing_table.txt  line_gap.txt  lines.txt  misc.txt
(+5 files in other folders)
